syntax = "proto3";

package inventory.v1;

option go_package = "github.com/xiebiao/bookstore/proto/inventory/v1;inventoryv1";

// ============================================================
// InventoryService - 库存服务
// ============================================================
// 职责：
// 1. 库存查询
// 2. 库存扣减（下单）
// 3. 库存释放（取消订单、支付失败）
// 4. 库存补充（补货）
//
// 教学重点：
// 1. 高并发场景下的库存扣减（Redis + Lua脚本）
// 2. 库存变更日志（审计和对账）
// 3. 防超卖机制
// ============================================================

service InventoryService {
  // 查询库存
  // 用例：商品详情页展示剩余库存
  rpc GetStock(GetStockRequest) returns (GetStockResponse);

  // 批量查询库存
  // 用例：商品列表页展示库存状态（有货/无货）
  rpc BatchGetStock(BatchGetStockRequest) returns (BatchGetStockResponse);

  // 扣减库存（下单时调用）
  // 教学重点：
  // 1. SELECT FOR UPDATE（悲观锁）
  // 2. Redis + Lua脚本（高性能）
  // 3. 幂等性设计（order_id防止重复扣减）
  rpc DeductStock(DeductStockRequest) returns (DeductStockResponse);

  // 释放库存（订单取消、支付失败时调用）
  // 教学重点：Saga补偿机制
  rpc ReleaseStock(ReleaseStockRequest) returns (ReleaseStockResponse);

  // 补充库存（补货）
  // 用例：管理员补货操作
  rpc RestockInventory(RestockInventoryRequest) returns (RestockInventoryResponse);

  // 获取库存变更日志
  // 用例：库存对账、审计
  rpc GetInventoryLogs(GetInventoryLogsRequest) returns (GetInventoryLogsResponse);
}

// ============================================================
// 请求/响应消息定义
// ============================================================

// 查询库存
message GetStockRequest {
  uint64 book_id = 1;
}

message GetStockResponse {
  uint32 code = 1;
  string message = 2;
  uint64 book_id = 3;
  int32 stock = 4;      // 库存数量
}

// 批量查询库存
message BatchGetStockRequest {
  repeated uint64 book_ids = 1;
}

message BatchGetStockResponse {
  uint32 code = 1;
  string message = 2;
  repeated StockInfo stocks = 3;
}

// 库存信息
message StockInfo {
  uint64 book_id = 1;
  int32 stock = 2;
}

// 扣减库存
message DeductStockRequest {
  uint64 book_id = 1;
  int32 quantity = 2;       // 扣减数量
  uint64 order_id = 3;      // 订单ID（用于幂等性控制）
}

message DeductStockResponse {
  uint32 code = 1;          // 0成功，1库存不足，2其他错误
  string message = 2;
  int32 remaining_stock = 3; // 扣减后剩余库存
}

// 释放库存
message ReleaseStockRequest {
  uint64 book_id = 1;
  int32 quantity = 2;
  uint64 order_id = 3;      // 订单ID（用于记录日志）
  string reason = 4;        // 释放原因：order_cancelled, payment_failed
}

message ReleaseStockResponse {
  uint32 code = 1;
  string message = 2;
  int32 current_stock = 3;  // 释放后当前库存
}

// 补充库存
message RestockInventoryRequest {
  uint64 book_id = 1;
  int32 quantity = 2;       // 补充数量
}

message RestockInventoryResponse {
  uint32 code = 1;
  string message = 2;
  int32 current_stock = 3;
}

// 获取库存变更日志
message GetInventoryLogsRequest {
  uint64 book_id = 1;
  uint32 page = 2;
  uint32 page_size = 3;
}

message GetInventoryLogsResponse {
  uint32 code = 1;
  string message = 2;
  repeated InventoryLog logs = 3;
  uint32 total = 4;
}

// 库存变更日志
message InventoryLog {
  uint64 id = 1;
  uint64 book_id = 2;
  string change_type = 3;   // DEDUCT, RELEASE, RESTOCK
  int32 quantity = 4;       // 变更数量（正数为增加，负数为减少）
  int32 before_stock = 5;   // 变更前库存
  int32 after_stock = 6;    // 变更后库存
  uint64 order_id = 7;      // 关联订单ID（可选）
  int64 created_at = 8;
}
