package main

import (
	"context"
	"fmt"
	"log"
	"net"
	"os"
	"os/signal"
	"syscall"
	"time"

	orderv1 "github.com/xiebiao/bookstore/proto/orderv1"
	"github.com/xiebiao/bookstore/services/order-service/internal/domain/order"
	"github.com/xiebiao/bookstore/services/order-service/internal/grpc/handler"
	"github.com/xiebiao/bookstore/services/order-service/internal/infrastructure/config"
	"github.com/xiebiao/bookstore/services/order-service/internal/infrastructure/grpc_client"
	"github.com/xiebiao/bookstore/services/order-service/internal/infrastructure/persistence/mysql"
	redisStore "github.com/xiebiao/bookstore/services/order-service/internal/infrastructure/persistence/redis"
	"google.golang.org/grpc"
	"google.golang.org/grpc/reflection"
)

func main() {
	// 1. åŠ è½½é…ç½®
	cfg := config.Load("./config/config.yaml")
	if err := cfg.Validate(); err != nil {
		log.Fatalf("é…ç½®éªŒè¯å¤±è´¥: %v", err)
	}

	// 2. åˆå§‹åŒ–MySQL
	db := mysql.InitDB(&cfg.Database)
	defer mysql.Close(db)

	// 3. åˆå§‹åŒ–Redis
	redisClient := redisStore.InitRedis(&cfg.Redis)
	defer redisClient.Close()

	// 4. åˆå§‹åŒ–gRPCå®¢æˆ·ç«¯ï¼ˆä¸‹æ¸¸æœåŠ¡ï¼‰
	inventoryClient, err := grpc_client.NewInventoryClient(cfg.GetServiceAddr("inventory"))
	if err != nil {
		log.Fatalf("åˆ›å»ºinventoryå®¢æˆ·ç«¯å¤±è´¥: %v", err)
	}
	defer inventoryClient.Close()

	catalogClient, err := grpc_client.NewCatalogClient(cfg.GetServiceAddr("catalog"))
	if err != nil {
		log.Fatalf("åˆ›å»ºcatalogå®¢æˆ·ç«¯å¤±è´¥: %v", err)
	}
	defer catalogClient.Close()

	// 5. åˆ›å»ºä»“å‚¨å’Œç¼“å­˜
	orderRepo := mysql.NewOrderRepository(db)
	orderCache := redisStore.NewOrderCache(redisClient)

	// 6. åˆ›å»ºgRPCæœåŠ¡
	grpcServer := grpc.NewServer()
	orderService := handler.NewOrderServiceServer(
		orderRepo,
		orderCache,
		inventoryClient,
		catalogClient,
		cfg,
	)
	orderv1.RegisterOrderServiceServer(grpcServer, orderService)

	// å¯ç”¨åå°„ï¼ˆä¾¿äºgrpcurlè°ƒè¯•ï¼‰
	reflection.Register(grpcServer)

	// 7. å¯åŠ¨å®šæ—¶ä»»åŠ¡ï¼ˆè®¢å•è¶…æ—¶å–æ¶ˆï¼‰
	ctx, cancel := context.WithCancel(context.Background())
	defer cancel()
	go startOrderTimeoutTask(ctx, orderRepo, orderCache, inventoryClient, cfg)

	// 8. å¯åŠ¨gRPCæœåŠ¡å™¨
	lis, err := net.Listen("tcp", fmt.Sprintf(":%d", cfg.Server.Port))
	if err != nil {
		log.Fatalf("ç›‘å¬ç«¯å£å¤±è´¥: %v", err)
	}

	log.Printf("ğŸš€ order-service å¯åŠ¨æˆåŠŸï¼Œç›‘å¬ç«¯å£: :%d", cfg.Server.Port)
	log.Printf("ğŸ“‹ è®¢å•è¶…æ—¶æ—¶é—´: %dåˆ†é’Ÿ", cfg.Order.PaymentTimeout)

	// 9. ä¼˜é›…å…³é—­
	go func() {
		if err := grpcServer.Serve(lis); err != nil {
			log.Fatalf("gRPCæœåŠ¡å¯åŠ¨å¤±è´¥: %v", err)
		}
	}()

	// ç­‰å¾…ä¸­æ–­ä¿¡å·
	quit := make(chan os.Signal, 1)
	signal.Notify(quit, syscall.SIGINT, syscall.SIGTERM)
	<-quit

	log.Println("æ­£åœ¨å…³é—­æœåŠ¡...")
	grpcServer.GracefulStop()
	log.Println("âœ… æœåŠ¡å·²å…³é—­")
}

// startOrderTimeoutTask å¯åŠ¨è®¢å•è¶…æ—¶å–æ¶ˆå®šæ—¶ä»»åŠ¡
//
// æ•™å­¦è¦ç‚¹ï¼š
// 1. å®šæ—¶ä»»åŠ¡è®¾è®¡ï¼š
//   - æ¯åˆ†é’Ÿæ‰«æä¸€æ¬¡Redis ZSet
//   - æŸ¥è¯¢è¿‡æœŸçš„è®¢å•ï¼ˆscore <= å½“å‰æ—¶é—´ï¼‰
//   - æ‰¹é‡å–æ¶ˆè®¢å•å¹¶é‡Šæ”¾åº“å­˜
//
// 2. åˆ†å¸ƒå¼é”ï¼ˆå¯é€‰ï¼‰ï¼š
//   - å¤šå®ä¾‹éƒ¨ç½²æ—¶éœ€è¦åˆ†å¸ƒå¼é”ï¼ˆé˜²æ­¢é‡å¤å¤„ç†ï¼‰
//   - ä½¿ç”¨Redis SETNXå®ç°
//   - Phase 2ç®€åŒ–ä¸ºå•å®ä¾‹
//
// 3. å®¹é”™å¤„ç†ï¼š
//   - å•ä¸ªè®¢å•å–æ¶ˆå¤±è´¥ä¸å½±å“å…¶ä»–è®¢å•
//   - å¤±è´¥çš„è®¢å•ä¸‹æ¬¡ç»§ç»­å¤„ç†
func startOrderTimeoutTask(
	ctx context.Context,
	repo order.Repository,
	cache redisStore.OrderCache,
	inventoryClient *grpc_client.InventoryClient,
	cfg *config.Config,
) {
	ticker := time.NewTicker(1 * time.Minute)
	defer ticker.Stop()

	log.Println("ğŸ“… è®¢å•è¶…æ—¶å–æ¶ˆä»»åŠ¡å·²å¯åŠ¨")

	for {
		select {
		case <-ctx.Done():
			log.Println("è®¢å•è¶…æ—¶ä»»åŠ¡å·²åœæ­¢")
			return
		case <-ticker.C:
			// æ‰§è¡Œè¶…æ—¶æ£€æŸ¥
			expiredOrders, err := cache.GetExpiredOrders(ctx, 100)
			if err != nil {
				log.Printf("æŸ¥è¯¢è¶…æ—¶è®¢å•å¤±è´¥: %v", err)
				continue
			}

			if len(expiredOrders) == 0 {
				continue
			}

			log.Printf("å‘ç°%dä¸ªè¶…æ—¶è®¢å•ï¼Œå¼€å§‹è‡ªåŠ¨å–æ¶ˆ", len(expiredOrders))

			for _, orderID := range expiredOrders {
				if err := cancelExpiredOrder(ctx, orderID, repo, cache, inventoryClient, cfg); err != nil {
					log.Printf("å–æ¶ˆè®¢å•å¤±è´¥ (order_id=%d): %v", orderID, err)
				} else {
					log.Printf("âœ… è®¢å•å·²è‡ªåŠ¨å–æ¶ˆ (order_id=%d)", orderID)
				}
			}
		}
	}
}

// cancelExpiredOrder å–æ¶ˆè¶…æ—¶è®¢å•
func cancelExpiredOrder(
	ctx context.Context,
	orderID uint,
	repo order.Repository,
	cache redisStore.OrderCache,
	inventoryClient *grpc_client.InventoryClient,
	cfg *config.Config,
) error {
	// 1. æŸ¥è¯¢è®¢å•
	o, err := repo.FindByID(ctx, orderID)
	if err != nil {
		return err
	}

	// 2. æ£€æŸ¥çŠ¶æ€ï¼ˆåªå–æ¶ˆå¾…æ”¯ä»˜è®¢å•ï¼‰
	if o.Status != order.OrderStatusPending {
		// å·²æ”¯ä»˜æˆ–å·²å–æ¶ˆï¼Œä»å¾…æ”¯ä»˜é˜Ÿåˆ—ç§»é™¤
		cache.RemovePendingOrder(ctx, orderID)
		return nil
	}

	// 3. æ›´æ–°è®¢å•çŠ¶æ€ä¸ºå·²å–æ¶ˆ
	if err := o.UpdateStatus(order.OrderStatusCancelled); err != nil {
		return err
	}

	if err := repo.Update(ctx, o); err != nil {
		return err
	}

	// 4. é‡Šæ”¾åº“å­˜
	for _, item := range o.Items {
		_, err := inventoryClient.ReleaseStock(
			ctx,
			item.BookID,
			item.Quantity,
			o.ID,
			cfg.GetServiceTimeout("inventory"),
		)
		if err != nil {
			log.Printf("é‡Šæ”¾åº“å­˜å¤±è´¥ (book_id=%d): %v", item.BookID, err)
		}
	}

	// 5. ä»å¾…æ”¯ä»˜é˜Ÿåˆ—ç§»é™¤
	cache.RemovePendingOrder(ctx, orderID)

	// 6. åˆ é™¤ç¼“å­˜
	cache.DeleteOrder(ctx, orderID)

	return nil
}
